--- a/src/style/cart.scss
+++ b/src/style/cart.scss
@@ -1,24 +1,27 @@
 .cart-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  height: 100%;
+  height: 100vh;
 }
 
 .cart {
-  width: 100%;
+  width: 100vw;
   display: grid;
   grid-template-columns: 1fr 0.3fr;
-  grid-gap: 1rem;
+  grid-gap: 5px;
 }
 
 .cart-info {
-  grid-column: span 1;
   margin: 15px;
   padding: 10px;
-  height: 200px;
+  height: 100px;
   width: 250px;
+  .container {
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 .btn-container {
