--- a/src/style/shop.scss
+++ b/src/style/shop.scss
@@ -1,7 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
 .container {
   display: flex;
   flex-direction: column;
